# BifurcationRenderer

./: CMakeLists.txt  main.cpp
mrn/: Debug.cpp  Debug.h  MathSolver.cpp  MathSolver.h  PlyReader.cpp  PlyReader.h  PyFunction.cpp  PyFunction.h  PyInterface.cpp  PyInterface.h
mrn/application/: CoordSystem3D.cpp  CoordSystem3D.h  DuffingSolver.cpp  DuffingSolver.h  FileIO.cpp  FileIO.h  Interface.cpp  Interface.h
mrn/application/Bifurcation/: Bifurcation.cpp  Bifurcation.h  Circumsphere.cpp  Circumsphere.h  DataReader.cpp  DataReader.h  Edge.cpp  Edge.h  Front.cpp  Front.h  Gauss.cpp  Mesh.cpp  Mesh.h  Mesher.cpp  Mesher.h  P.cpp  P.h  Pivoter.cpp  Pivoter.h  Triangle.cpp  Triangle.h  Vertex.cpp  Vertex.h
mrn/application/Bifurcation/ballpivot/: Edge.cpp  Edge.h  Facet.cpp  Facet.h  FileIO.cpp  FileIO.h  Mesher.cpp  Mesher.h  Octree.h  OctreeIterator.h  OctreeNode.h  Point.cpp  Point.h  Vertex.cpp  Vertex.h  types.h  utilities.h
mrn/application/Trashcan/: Gauss.h  P.cpp
mrn/engine/: Engine.cpp  Engine.h  FontRenderer.cpp  FontRenderer.h  GLVertex.h  Line.cpp  Line.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Primitives.cpp  Primitives.h  Renderable.cpp  Renderable.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Triangle.cpp  TriangleIndex.cpp  TriangleIndex.h  Vertex.h  Window.cpp  Window.h  common.h
mrn/engine/cameras/: ArcballCamera.cpp  ArcballCamera.h  Camera.cpp  Camera.h  FpsCamera.cpp  FpsCamera.h
mrn/engine/eventbus/: BusMember.cpp  BusMember.h  BusNode.cpp  BusNode.h  Event.cpp  Event.h  EventBus.cpp  EventBus.h  EventTypes.h
mrn/ui/: Label.cpp  Label.h  Ui.cpp  Ui.h  Widget.cpp  Widget.h  WidgetElement.cpp  WidgetElement.h
shader/: default.vert  default_mvp.vert  ui.frag
